Closed
Bug 130158
Opened 23 years ago
Closed 23 years ago
NSC_CopyObject crashes if pk11_CopyObject fails
Categories
(NSS :: Libraries, defect, P2)
Tracking
(Not tracked)
RESOLVED
FIXED
3.4
People
(Reporter: jamie-bugzilla, Assigned: jamie-bugzilla)
References
Details
Attachments
(2 files)
595 bytes,
patch
|
Details | Diff | Splinter Review | |
462 bytes,
patch
|
Details | Diff | Splinter Review |
If pk11_CopyObject fails in NSC_CopyObject, we free the object but then continue
with the function. We try to use the object we just freed and crash. We should
probably return or jump to the end of the function.
Assignee | ||
Comment 1•23 years ago
|
||
Jump to the end of the function if pk11_CopyObject fails.
Assignee | ||
Comment 2•23 years ago
|
||
I don't think this needs to get fixed for NSS 3.4 because it won't get exercized .
Comment 3•23 years ago
|
||
In keeping with the current style of error handling in that
function, I suggest this patch instead. We should just return
crv directly.
Comment 4•23 years ago
|
||
I checked in patch #2.
Status: NEW → RESOLVED
Closed: 23 years ago
Priority: -- → P2
Resolution: --- → FIXED
Target Milestone: --- → 3.4
You need to log in
before you can comment on or make changes to this bug.
Description
•