Bugzilla bug 130158: fixed a crash in NSC_CopyObject if pk11_CopyObject fails.